# medwriter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-commands.txt  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  PHASE_FIVE.md  PHASE_FOUR.md  PHASE_ONE.md  PHASE_THREE.md  PHASE_TWO.md
config/: config.json
docker/: init.sql
scripts/: migrate_add_message_columns.py  test_api.py  test_full_flow.py  test_phase_three.py  verify_installation.py  verify_phase_two.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: conversations.py  messages.py
src/cli/: main.py
src/config/: __init__.py  json_config.py  settings.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/mcp_server/: server.py
src/pdf/: __init__.py  processor.py  store.py
src/redis/: __init__.py  client.py  job_queue.py
src/ui/: chat.html  conversations.html  index.html
src/ui/static/css/: style.css
src/ui/static/js/: api.js
src/worker/: __main__.py  agent.py  article_summarizer.py  mcp_client.py  poll.py  title_generator.py  worker.py
tests/: test_agent.py  test_config.py  test_database.py  test_integration.py  test_mcp_client.py  test_mcp_server.py  test_pdf_processor.py  test_phase_four_concurrency.py  test_redis.py  test_retry_logic.py  test_title_generator.py  test_worker.py
